--- a/Front.html
+++ b/Front.html
@@ -97,10 +97,12 @@
             </div>
             <div class="card8">
                 <div class="pic"></div>
-                <div class="discrep"></div>
+                <div class="disc rep"></div>
                 <div class="price"></div>
                 <div class="city"></div>
             </div>
+            <!-- fsdaf -->
+            
             <div class="card9">
                 <div class="pic"></div>
                 <div class="discrep"></div>
